# butterfly_emulator

./: Cargo.toml  README.md
demos/: README.md  blink.asm  decimal-test.asm  multiply10-blink.asm  multiply10-noblink.asm  multiply10loop.asm
src/: main.rs
src/emulator/: mod.rs
src/emulator/devices/: bus.rs  led_blink.rs  mod.rs  ram32k.rs  rom.rs
